@@ -1,1 +1,2 @@
+set c++11
 using Int = int
